--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.9cm;
+    text-align: center;
 }
 
 input{
@@ -23,4 +24,8 @@ select{
 
 form{
     text-align: center;
+}
+
+div{
+    margin: 0 auto;
 }
